src/test/ui/privacy/privacy2.stderr
error[E0432]: unresolved import `bar::foo`
  --> $DIR/privacy2.rs:17:9
   |
LL |     use bar::foo;
   |         ^^^^^^^^ no `foo` in `bar`

error[E0603]: function `foo` is private
  --> $DIR/privacy2.rs:23:20
   |
LL |     use bar::glob::foo;
   |                    ^^^

error: requires `sized` lang_item

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0603.
For more information about an error, try `rustc --explain E0432`.
